# shm2-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  result
docs/: SHM2_LIVE_SYNC_DESIGN.md  SHM_ONLY_GST_DESIGN.txt
scripts/: nv12_attach_detach_test.sh  nv12_attach_detach_uri_test.sh  winshm_attach_detach_test.ps1
src/: allocator.rs  lib.rs  main.rs  shm2sink.rs  shm2src.rs  transport.rs
src/platform/: mod.rs  posix_file.rs  windows_ivshmem.rs  windows_named.rs
