[package]
name = "shm2_rs"
version = "0.1.0"
edition = "2024"
description = "SHM-only transport and GStreamer plugin prototype"
license = "MIT"
repository = "https://example.invalid/shm2-rs"

[lib]
name = "gstshm2"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
glib = "0.20"
gstreamer = "0.23"
gstreamer-base = "0.23"
once_cell = "1.21"

[[bin]]
name = "shm2_producer"
path = "src/bin/shm2_producer.rs"

[[bin]]
name = "shm2_consumer"
path = "src/bin/shm2_consumer.rs"
