[package]
name = "shm2_rs"
version = "0.1.0"
edition = "2024"
description = "SHM-only transport and GStreamer plugin prototype"
license = "MIT"
repository = "https://example.invalid/shm2-rs"

[lib]
name = "gstshm2"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
glib = "0.20"
gstreamer = "0.23"
gstreamer-base = "0.23"
gstreamer-video = "0.23"
once_cell = "1.21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Memory",
] }

[[bin]]
name = "shm2_producer"
path = "src/bin/shm2_producer.rs"

[[bin]]
name = "shm2_consumer"
path = "src/bin/shm2_consumer.rs"
